# ConfigGen

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
configgen/: __init__.py  cli.py  core.py  environment.py  formats.py  inheritance.py  template.py  validator.py  variables.py
src/: index.ts
templates/: app.yaml.j2
